Version-1.1-00/Minio/Minio-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio
spec:
  serviceName: "minio"
  replicas: 3
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2023-07-11T21-29-34Z
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
          name: minio
        volumeMounts:
        - name: miniodata
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: miniodata
    spec:
      storageClassName: kang-sc
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 15Gi
