Version-1.1-00/Minio/Minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  ports:
    - port: 9000
  selector:
    app: minio
  type: ClusterIP
