Version-1.1-00/Minio/Minio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  namespace: minio
spec:
  rules:
  - host: minio.oblivionone.com
    http:
      paths:
      - backend:
          serviceName: minio-service
          servicePort: 9000
        path: /
        pathType: Prefix
